--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.88.7",
+    "@react-three/fiber": "^8.15.8",
+    "@studio-freight/hamo": "^0.6.21",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "next": "^14.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.69.5"
-    
+    "react-use": "^17.4.0",
+    "sass": "^1.69.5",
+    "three": "^0.158.0"
   }
 }
