--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@react-three/drei": "^9.88.7",
     "@react-three/fiber": "^8.15.8",
-    "@studio-freight/hamo": "^0.6.21",
+    "@studio-freight/hamo": "^0.6.22",
     "axios": "^0.21.1",
+    "clsx": "^2.0.0",
     "dotenv": "^8.2.0",
     "next": "^14.0.0",
+    "next-seo": "^6.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
