--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "clsx": "^2.0.0",
     "dotenv": "^8.2.0",
+    "framer-motion": "^10.16.12",
     "next": "^14.0.0",
     "next-seo": "^6.4.0",
     "postprocessing": "^6.33.3",
