--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^10.16.12",
     "next": "^14.0.0",
     "next-seo": "^6.4.0",
+    "noisejs": "^2.1.0",
     "postprocessing": "^6.33.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
