--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.88.7",
     "@react-three/fiber": "^8.15.8",
     "@studio-freight/hamo": "^0.6.22",
+    "alea": "^1.0.1",
     "axios": "^0.21.1",
     "clsx": "^2.0.0",
     "dotenv": "^8.2.0",
@@ -25,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-use": "^17.4.0",
     "sass": "^1.69.5",
+    "simplex-noise": "^4.0.1",
     "three": "^0.158.0"
   }
 }
